Mobile loading overflow fixed

--- a/src/scss/design-system/_css-setup.scss
+++ b/src/scss/design-system/_css-setup.scss
@@ -13,6 +13,7 @@ html,
 #__next {
     width: 100%;
     top: 0;
+    position: relative;
     overflow: hidden;
 }
 body {
